--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -1,12 +1,32 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<link rel="stylesheet" type="text/css" href="{% static 'shop/style.css'%}">
 	<title>Django Ecommerce Website</title>
 </head>
 <body>
-
+	<div class="container">
+		<div class="row">
+			{% for product in product_objects %}
+			<div class="col-md-3">
+				<div class="card">
+					<img src="{{product.image}}" class="card-img-top">
+					<div class="card-body">
+						<div class="card-title">
+							{{ product.title }}
+						</div>
+						<div class="card-text">
+							Rs. {{ product.price }}
+						</div>
+					</div>
+				</div>
+			</div>
+			{% endfor %}
+		</div>
+	</div>
 </body>
 </html>
 
@@ -16,6 +36,5 @@
 
 
 
-{% for product in product_objects %}
-	{{ product.title }}
-{% endfor %}
+
+	
