--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -5,16 +5,56 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="{% static 'shop/style.css'%}">
+	<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 	<title>Django Ecommerce Website</title>
 </head>
 <body>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
+			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			  <a class="navbar-brand" href="#">Navbar</a>
+			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			    <span class="navbar-toggler-icon"></span>
+			  </button>
+
+			  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+			    <ul class="navbar-nav mr-auto">
+			      <li class="nav-item active">
+			        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+			      </li>
+			      <li class="nav-item">
+			        <a id="cart" class="nav-link" href="#">Link</a>
+			      </li>
+			      <li class="nav-item dropdown">
+			        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			          Dropdown
+			        </a>
+			        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+			          <a class="dropdown-item" href="#">Action</a>
+			          <a class="dropdown-item" href="#">Another action</a>
+			          <div class="dropdown-divider"></div>
+			          <a class="dropdown-item" href="#">Something else here</a>
+			        </div>
+			      </li>
+			      <li class="nav-item">
+			        <a class="nav-link disabled" href="#">Disabled</a>
+			      </li>
+			    </ul>
+			    <form class="form-inline my-2 my-lg-0">
+			      <input class="form-control mr-sm-2" name="item_name" type="search" placeholder="Search" aria-label="Search">
+			      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+			    </form>
+			  </div>
+			</nav>
+			</div>
+		</div>
+		<!-- <div class="row">
+			<div class="col-md-12">
 				<div class="card card-sm">
 					<form class="card-body row no-gutters align-items-center">
 						<div class="col">
-							<input type="search" name="item_name" placeholder="Search for products" class="form-control form-control-borderless">
+							<input type="search"  placeholder="Search for products" class="form-control form-control-borderless">
 						</div>
 						<div class="col-auto">
 							<button class="btn btn-success" type="submit">Search</button>
@@ -22,11 +62,11 @@
 					</form>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<div class="row">
 			{% for product in product_objects %}
 			<div class="col-md-3">
-				<div class="card">
+				<div class="card" href="/{{ product.id }}">
 					<img src="{{product.image}}" class="card-img-top">
 					<div class="card-body">
 						<div class="card-title">
@@ -35,6 +75,8 @@
 						<div class="card-text">
 							Rs. {{ product.price }}
 						</div>
+						<a class="btn btn-warning" href="/{{ product.id }}">View</a>
+						<button id={{product.id}} class="btn atc btn-warning">Add to Cart</button>
 					</div>
 				</div>
 			</div>
@@ -61,6 +103,26 @@
 		</div>
 	</div>
 </body>
+<script type="text/javascript">
+	if (localStorage.getItem('cart')==null){
+		var cart = {};
+	}
+	else{
+		cart = JSON.parse(localStorage.getItem('cart'));
+	}
+	$(document).on('click', '.atc', function(){
+		var item_id = this.id.toString();
+
+		if (cart[item_id] != undefined){
+			cart[item_id] = cart[item_id] + 1; 
+		}
+		else{
+			cart[item_id] = 1;
+		}
+		localStorage.setItem('cart',JSON.stringify(cart));
+		document.getElementById('cart').innerHTML = "Cart ("+Object.keys(cart).length+")";
+	});
+</script>
 </html>
 
 
