--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -2,10 +2,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="{% static 'shop/style.css'%}">
-	<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 	<title>Django Ecommerce Website</title>
 </head>
 <body>
@@ -24,7 +25,10 @@
 			        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
 			      </li>
 			      <li class="nav-item">
-			        <a id="cart" class="nav-link" href="#">Link</a>
+			        <button id='cart' data-html="true" type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Vivamus
+sagittis lacus vel augue laoreet rutrum faucibus.">
+  Cart(0)
+</button>
 			      </li>
 			      <li class="nav-item dropdown">
 			        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -69,14 +73,14 @@
 				<div class="card" href="/{{ product.id }}">
 					<img src="{{product.image}}" class="card-img-top">
 					<div class="card-body">
-						<div class="card-title">
+						<div id='title{{product.id}}' class="card-title">
 							{{ product.title }}
 						</div>
 						<div class="card-text">
 							Rs. {{ product.price }}
 						</div>
 						<a class="btn btn-warning" href="/{{ product.id }}">View</a>
-						<button id={{product.id}} class="btn atc btn-warning">Add to Cart</button>
+						<button id='{{product.id}}' class="btn atc btn-warning">Add to Cart</button>
 					</div>
 				</div>
 			</div>
@@ -122,6 +126,23 @@
 		localStorage.setItem('cart',JSON.stringify(cart));
 		document.getElementById('cart').innerHTML = "Cart ("+Object.keys(cart).length+")";
 	});
+	// $(function () {
+	//   $('[data-toggle="popover"]').popover()
+	//   document.getElementById('cart').setAttribute('data-content', '<h5> This is your cart </h5>')
+	// });
+	DisplayCart(cart);
+	function DisplayCart(cart){
+		var cartString = "";
+		cartString += '<h5> This is your cart </h5>';
+		cartIndex = 1;
+		for (var x in cart){
+			cartString += cartIndex;
+			cartString += document.getElementById('title'+x).innerHTML+ " ("+cart[x]+")</br>";
+			cartIndex += 1;
+		}
+		document.getElementById('cart').setAttribute('data-content', cartString);
+		$('[data-toggle="popover"]').popover();
+	}
 </script>
 </html>
 
