--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -140,6 +140,7 @@ sagittis lacus vel augue laoreet rutrum faucibus.">
 			cartString += document.getElementById('title'+x).innerHTML+ " ("+cart[x]+")</br>";
 			cartIndex += 1;
 		}
+		cartString += "<a href='/checkout'><button class='btn btn-warning' id='checkout'>Checkout</button></a>" 
 		document.getElementById('cart').setAttribute('data-content', cartString);
 		$('[data-toggle="popover"]').popover();
 	}
