--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -73,9 +73,7 @@ sagittis lacus vel augue laoreet rutrum faucibus.">
 				<div class="card" href="/{{ product.id }}">
 					<img src="{{product.image}}" class="card-img-top">
 					<div class="card-body">
-						<div id='title{{product.id}}' class="card-title">
-							{{ product.title }}
-						</div>
+						<div id='title{{product.id}}' class="card-title">{{ product.title }}</div>
 						<div class="card-text">
 							Rs. {{ product.price }}
 						</div>
@@ -118,10 +116,10 @@ sagittis lacus vel augue laoreet rutrum faucibus.">
 		var item_id = this.id.toString();
 
 		if (cart[item_id] != undefined){
-			cart[item_id] = cart[item_id] + 1; 
+			cart[item_id][0] = cart[item_id][0] + 1;
 		}
 		else{
-			cart[item_id] = 1;
+			cart[item_id] = [1, document.getElementById('title'+item_id).innerHTML]
 		}
 		localStorage.setItem('cart',JSON.stringify(cart));
 		document.getElementById('cart').innerHTML = "Cart ("+Object.keys(cart).length+")";
@@ -137,7 +135,7 @@ sagittis lacus vel augue laoreet rutrum faucibus.">
 		cartIndex = 1;
 		for (var x in cart){
 			cartString += cartIndex;
-			cartString += document.getElementById('title'+x).innerHTML+ " ("+cart[x]+")</br>";
+			cartString += document.getElementById('title'+x).innerHTML+ " ("+cart[x][0]+")</br>";
 			cartIndex += 1;
 		}
 		cartString += "<a href='/checkout'><button class='btn btn-warning' id='checkout'>Checkout</button></a>" 
